[package]
name = "my-sqlite-core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-logs-and-telemetry = ["my-telemetry"]

[dependencies]
my-json = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-json.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "objects-pool",
    "with-tokio",
] }
my-telemetry = { tag = "1.1.0", optional = true, git = "https://github.com/MyJetTools/my-telemetry.git" }

tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
async-trait = "*"
serde_json = "*"
lazy_static = "*"
async-sqlite = "*"
