[package]
name = "my-sqlite-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-table-schema = []

[lib]
proc-macro = true

[dependencies]
types-reader = { tag = "0.5.0", git = "https://github.com/MyJetTools/types-reader.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }

syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
