[package]
name = "my-sqlite-macros"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-table-schema = []

[lib]
proc-macro = true

[dependencies]
types-reader = { tag = "0.5.1", git = "https://github.com/MyJetTools/types-reader.git" }
sql-core = { tag = "0.1.1", git = "https://github.com/MyJetTools/sql-core.git" }

syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
