[package]
name = "my-sqlite-tests"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
types-reader = { tag = "0.5.1", git = "https://github.com/MyJetTools/types-reader.git" }

my-sqlite = { path = "../my-sqlite", features = ["macros"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

tokio = { version = "*", features = ["full"] }
