[package]
name = "my-sqlite"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
macros = ["dep:my-sqlite-macros"]
debug-table-schema = ["my-sqlite-macros?/debug-table-schema"]
with-telemetry = ["my-sqlite-core/with-logs-and-telemetry"]

[dependencies]
my-sqlite-macros = { optional = true, path = "../my-sqlite-macros" }
my-sqlite-core = { path = "../my-sqlite-core" }
